# pyptv

./: .coveragerc  .dockerignore  .gitignore  .gitmodules  .travis.yml  ACTION_REQUIRED.md  ANTI_PATTERN_AUDIT_SUMMARY.md  BUG_FIX_SUMMARY.md  CHANGES.md  CLAUDE.md  DEBUG_INSTRUCTIONS.md  DEPLOYMENT.md  DEVELOP.md  DOCKER.md  DOCKER_README.md  DOCKER_RUN.md  DOCKER_SIMPLE.md  Dockerfile  Dockerfile.basic  Dockerfile.kasm  Dockerfile.minimal  Dockerfile.novnc  Dockerfile.simple  Dockerfile.test  Dockerfile.tiredofit  IMAGE_COORD_CORRESP_IMPLEMENTATION.md  IMPROVEMENTS_SUMMARY.md  INITIALIZATION_FIX.md  INSTALL.md  INSTALL_WINDOWS.md  ISSUES.md  LICENSE.txt  LOGGING_GUIDE.md  PARAMETER_SYSTEM_INTEGRATION.md  PERFORMANCE_IMPROVEMENTS.md  PR_DESCRIPTION.md  PYPTV_ENVIRONMENT_GUIDE.md  README.md  README.rst  README_UNIFIED_YAML.md  (+97 more)
conda.recipe/: bld.bat  build.sh  conda_build_config.yaml  meta.yaml
distribution-helpers/: notes.md
docker/: startup.sh  supervisord.conf
docs/: CONSOLIDATION_SUMMARY.md  LOGGING_GUIDE.md  PARAMETER_EDITING_IMPLEMENTATION.md  PARAMETER_GUI_INTEGRATION_COMPLETE.md  PARAMETER_HANDLER_IMPROVEMENTS.md  PARAMETER_TYPE_CONVERSION_FIX.md  PYPTV_ENVIRONMENT_GUIDE.md  README.html  README.md  README_TTK_GUI.md  calibration.md  changes.md  directory_structure.md  example_workflows.md  examples.md  index.html  index.md  installation.md  migration_guide.md  parameter-migration.md  plugins.md  pyptv_user_manual.md  quick-start.md  recent_changes.md  running-gui.md  splitter-mode.md  user_guide.md  windows-installation.md  yaml-parameters.md  yaml_parameters_guide.md
parameters/: cal_ori.yaml  criteria.par  dumbbell.yaml  parameters.yaml  ptv.yaml  sequence.yaml
patches/: ptv_core_bridge_fix.patch  ptv_core_fix.patch
pyptv/: CALIBRATION_WORKFLOW.md  __init__.py  __main__.py  _backend.py  _marimo_illmenau_calibration_large_grid.py  _version.py  bump_version.py  calibration_gui.py  calibration_gui_pyside6.py  calibration_napari.py  calibration_summary.md  calibration_with_particles.ipynb  cli.py  code_editor.py  convert_to_unified_yaml.py  demo_ttk_features.py  detection_gui.py  detection_gui_v2.py  detection_ui.py  directory_editor.py  draw_3d_rt_is.py  draw_3d_target.py  dumbbell_ground_truth.py  experiment.py  experiment_ttk.py  ext_sequence_denis.py  ext_tracker_denis.py  external_sequence_list.txt  external_tracker_list.txt  fast_targ_rec.c  fast_targ_rec.pyx  flowtracks_utils.py  general.py  ground_truth.py  image_conversion.ipynb  imageplot.py  imread_chaco.py  legacy_parameters.py  marimo_detect_calibration_grid.py  marimo_dumbbell_validation.py  (+60 more)
recipe/: meta.yaml
scripts/: fix_opengl.sh  fix_pyside6_traitsui.sh  fix_pyside6_traitsui_auto.sh  generate_ground_truth_points.py  legacy_parameters_to_yaml.py  run_docker_tests.sh  standalone_calibration.py  standalone_dumbbell_calibration.py  verify_environment.py  visualize_cameras.py
src/: _backend.py  calibration_gui.py  detection_gui.py  directory_editor.py  dumbbell_ground_truth.py  experiment.py  file_editor_demo.py  flowtracks_utils.py  ground_truth.py  image_inspector.py  legacy_parameters.py  marimo_epipolar_opencv_board.py  marimo_epipolar_tool.py  marimo_ui_detection.py  marimo_ui_parameters.py  ptv.py  pyptv_batch.py  pyptv_batch_parallel.py  pyptv_gui.py  scatter_inspector2.py  standalone_calibration.py  standalone_dumbbell_calibration.py  visualize_cameras_nb.py  visualize_rt_is_nb.py
test_windows/: comprehensive_test.bat  parameters_default.yaml  test_install_pyptv.bat  test_script.bat
tests/: README.md  calibration_with_particles.ipynb  conftest.py  debug_parameter_translation.py  debug_params.py  demo_parallel_batch.py  demo_parameter_conversion.py  logger_demo.py  simple_test.py  test_apply_optimizations.py  test_cal_ori_roundtrip.py  test_calibration.py  test_calibration_copy.py  test_calibration_utils.py  test_cavity_comprehensive.py  test_cli.py  test_cli_extended.py  test_clone_calibration.py  test_code_editor.py  test_core_functionality.py  test_correspondence_fix.py  test_detection_bug.py  test_detection_consistency.py  test_detection_debug.py  test_detection_gui.py  test_detection_gui_simple.py  test_detection_simple.py  test_environment.py  test_experiment_design.py  test_experiment_par_to_yaml.py  test_export_ptv_is_to_paraview.py  test_ext_sequence_splitter.py  test_ext_sequence_splitter_pytest.py  test_extended_parameters.py  test_extract_cam_ids.py  test_file_base_to_filename.py  test_generate_short_file_bases.py  test_gui_components.py  test_gui_detection_fix.py  test_gui_full_workflow.py  (+64 more)
tests_gui/: test_detection_gui.py  test_gui_components.py  test_gui_full_workflow.py  test_gui_pipeline_cavity.py  test_installation_extended.py  test_maingui_design.py  test_parameter_gui_experiment.py  test_parameter_gui_handlers.py  test_parameter_gui_integration.py  test_parameter_manager_roundtrip.py
(+151 files in other folders)
