[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pyptv"
version = "0.4.0"
description = "Python GUI for the OpenPTV library `liboptv`"
authors = [
    {name = "Alex Liberzon", email = "alex.liberzon@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "numpy>=1.26.0",
    "optv>=0.3.0",
    # GUI dependencies - TTK + matplotlib replaces Chaco/Enable/Traits
    "matplotlib>=3.7.0",
    "ttkbootstrap>=1.10.0",  # Enhanced TTK widgets
    "Pillow>=10.0.0",
    # Scientific computing
    "scikit-image>=0.20.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "tables>=3.8.0",
    "tqdm>=4.65.0",
    "imagecodecs>=2023.1.23",
    "flowtracks>=0.3.0",
    # Development and utilities
    "Pygments>=2.15.0",
    "pyparsing>=3.0.0",
    "pytest>=8.4.1",
]

[project.scripts]
pyptv = "pyptv.pyptv_gui_ttk:main"
pyptv-demo = "pyptv.demo_matplotlib_gui:main"

[tool.setuptools]
packages = ["pyptv"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "0.4.0"
addopts = "-v -x --tb=short"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
